--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 body {
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #f4f6f8;
+  background-color: #eef7ff;
   color: #333;
 }
 
@@ -23,7 +23,7 @@ body {
 
 /* Navbar */
 .navbar {
-  background-color: #2c3e50;
+  background-color: #112a43;
   padding: 15px;
   color: white;
   text-align: center;
